--- a/partials/flowers.html
+++ b/partials/flowers.html
@@ -25,7 +25,7 @@
         {{flower.description}}
       </td>
       <td>
-        {{flower.price}}
+        {{flower.price | currency}}
       </td>
       <td>
         {{flower.title}}
@@ -61,7 +61,7 @@
         {{flower.description}}
       </td>
       <td>
-        {{flower.price}}
+        {{flower.price | currency}}
       </td>
       <td>
         {{flower.title}}
@@ -97,7 +97,7 @@
         {{flower.description}}
       </td>
       <td>
-        {{flower.price}}
+        {{flower.price | currency}}
       </td>
       <td>
         {{flower.title}}
